--- a/xp-array-behavior.html
+++ b/xp-array-behavior.html
@@ -15,8 +15,8 @@ This behavior is used to improve polymer's array mutation API on the context ele
 @group behaviors
 @homepage http://expandjs.com/elements/xp-array-behavior
 
-@dependency polymer Polymer/polymer
-@dependency expandjs ExpandJS/expandjs
+@dependency polymer Polymer/polymer#^1.0.4
+@dependency expandjs ExpandJS/expandjs#0.9.1
 -->
 
 <link rel="import" href="../polymer/polymer.html">
