--- a/xp-array-behavior.html
+++ b/xp-array-behavior.html
@@ -14,6 +14,7 @@ This behavior is used to improve polymer's array mutation API on the context ele
 @keywords web app, html5, expandjs, web-components
 @group behaviors
 @homepage http://expandjs.com/elements/xp-array-behavior
+@repository https://github.com/ExpandJS/xp-array-behavior
 
 @dependency polymer Polymer/polymer#^1.0.0
 @dependency expandjs ExpandJS/expandjs#0.9.5
