--- a/xp-array-behavior.html
+++ b/xp-array-behavior.html
@@ -7,7 +7,7 @@ The complete set of contributors may be found at https://expandjs.github.io/CONT
 -->
 
 <!--
-This behavior is used to improve polymer's array mutation API on the context element.
+A behavior used to improve Polymer's array mutation API on the context element.
 
 @behavior xp-array-behavior
 @description A behavior used to improve polymer's array mutation API on the context element.
@@ -17,7 +17,7 @@ This behavior is used to improve polymer's array mutation API on the context ele
 @repository https://github.com/ExpandJS/xp-array-behavior
 
 @dependency polymer Polymer/polymer#^1.0.0
-@dependency expandjs ExpandJS/expandjs#0.9.7
+@dependency expandjs ExpandJS/expandjs#0.9.8
 -->
 
 <link rel="import" href="../polymer/polymer.html">
