--- a/xp-array-behavior.html
+++ b/xp-array-behavior.html
@@ -10,7 +10,7 @@ The complete set of contributors may be found at https://expandjs.github.io/CONT
 A behavior used to improve Polymer's array mutation API.
 
 @behavior xp-array-behavior
-@description A behavior used to improve Polymer's array mutation API.
+@description A behavior used to improve Polymer's array mutation API
 @keywords expandjs, web app, custom elements, web-components
 @group behaviors
 @hot
